--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "npm": "7.4.3"
   },
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "server": "nodemon server/server.js",
+    "start": "nodemon server/server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node server.js",
+    "dev": "concurrently \"npm run client\" \"npm start\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
