--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@stripe/stripe-js": "^1.42.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20",
+    "redux": "^4.2.1",
     "stripe": "^10.17.0",
     "uuidv4": "^6.2.13"
   }
