--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-mongo_url = mongodb+srv://himanshuchoudharycoco:himanshu@cluster0.a8xtkua.mongodb.net/e-wallet
-jwt_secret = sheywallet
+mongo_url = mongodb+srv://nimitsingha02:passwordnimit@cluster0.a8xtkua.mongodb.net/Wallet
+jwt_secret = Wallet
